# rtsp_client

./: .gitignore  CMakeLists.txt  Makefile  RTSPClient.vcxproj  RtspClientConfig.cmake.in  RtspClientConfigVersion.cmake.in  client.cpp  client.h  live555.pc  main.cpp  mediasink.cpp  mediasink.h  runtest  streamclientstate.cpp  streamclientstate.h
cmake/: MSVCRuntime.cmake
examples/: tutorial02.c
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
